k8s/user-info/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  labels:
    app: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-info
          image: joshdavidang/agentic-ai-trading-be-user-info:latest
          ports:
            - containerPort: 8080
