k8s/user-info/postgres.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-postgres-db
spec:
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15-alpine
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: user-postgres-db
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
