k8s/user-info/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-info-service
spec:
  selector:
    app: user-info
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
