k8s/user-info/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-info-ingress
  annotations:
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /api/v1/user
            pathType: Prefix
            backend:
              service:
                name: user-info
                port:
                  number: 8080
